Add client search method
