# api/controllers/clients.js
@@ -1,6 +1,8 @@
 let db = require('../helpers/db')
 let PNF = require('google-libphonenumber').PhoneNumberFormat
 let phoneUtil = require('google-libphonenumber').PhoneNumberUtil.getInstance()
+let moment = require('moment')
+let Client = require('../helpers/clients').Client
 
 const clientsList = (req, res) => {
   return db.getClients().then(clients => {
@@ -39,6 +41,33 @@ const clientFind = (req, res) => {
   if (params.email.value !== undefined){
     return db.getClientBy('email', params.email.value)
   }
+}
+
+const clientSearch = (req, res) => {
+  let params = req.swagger.params
+  let query = {
+    bool: {
+      must: []
+    }
+  }
+  if (params.name.value){
+    query.bool.must.push({match: {name: params.name.value}})
+  }
+  if (params.minAge.value || params.maxAge.value){
+    let rangeClause = { range: { dob: {} } }
+    if (params.maxAge.value){
+      let minDate = new moment().subtract(params.maxAge.value + 1, 'years').add(1, 'days').toDate()
+      rangeClause.range.dob.from = minDate
+    }
+    if (params.minAge.value){
+      let maxDate = new moment().subtract(params.minAge.value, 'years').toDate()
+      rangeClause.range.dob.to = maxDate
+    }
+    query.bool.must.push(rangeClause)
+  }
+  Client.search(query, {hydrate: true}, (err, clients) => {
+    return res.json(clients.hits.hits)
+  })
 }
 
 const clientById = (req, res) => {
@@ -110,6 +139,7 @@ const clientDelete = (req, res) => {
 module.exports = {
   clientsList,
   clientFind,
+  clientSearch,
   clientById,
   clientCreate,
   clientUpdate,
